fix: add stack output info

--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -55,6 +55,32 @@ The `--env` argument is required.
 For more hands-on information on the above listed commands, please visit the [Deploy Your Project](/docs/how-to-guides/deployment/deploy-your-project) and [Destroy Cloud Infrastructure](/docs/how-to-guides/deployment/destroy-cloud-infrastructure) guides.
 :::
 
+### `yarn webiny output --env {env}`
+
+Returns stack output for the specified project application and environment.
+
+:::info
+Stack output represents all of the values that were exported from project application's cloud infrastructure code, for the specified environment. For example, in the **API** project application, in the [`api/pulumi/dev/index.ts`](https://github.com/webiny/webiny-js/blob/v5.14.0/packages/cwp-template-aws/template/api/pulumi/dev/index.ts#L127-L136) file, we have the following:
+
+```ts title="pinterest-clone/api/pulumi/dev/index.ts"
+return {
+    region: process.env.AWS_REGION,
+    apiUrl: cloudfront.cloudfront.domainName.apply(value => `https://${value}`),
+    cognitoUserPoolId: cognito.userPool.id,
+    cognitoAppClientId: cognito.userPoolClient.id,
+    updatePbSettingsFunction: pageBuilder.functions.updateSettings.arn,
+    psQueueAdd: prerenderingService.functions.queue.add.arn,
+    psQueueProcess: prerenderingService.functions.queue.process.arn,
+    dynamoDbTable: dynamoDb.table.name,
+    dynamoDbElasticsearchTable: elasticSearch.table.name
+};
+```
+:::
+
+### `yarn webiny info --env {env}`
+
+Returns useful URLs, for example, the URL over which the deployed GraphQL API can be accessed.
+
 ### `yarn webiny pulumi {folder} --env {env} -- {command}`
 
 Provides a way to execute Pulumi specific commands directly via the Pulumi CLI.
@@ -62,10 +88,6 @@ Provides a way to execute Pulumi specific commands directly via the Pulumi CLI.
 :::info
 For more information, please visit the [Execute Pulumi Commands](/docs/how-to-guides/deployment/execute-pulumi-commands) guide.
 :::
-
-### `yarn webiny info --env {env}`
-
-Returns useful URLs, for example, the URL over which the deployed GraphQL API can be accessed.
 
 ### `yarn webiny ws run {cmd} --folder {f} --scope {s}`
 
@@ -75,7 +97,7 @@ Runs provided command, for example the `watch` command, across multiple workspac
 For more information, please visit the [Working With Workspaces](/docs/how-to-guides/working-with-workspaces) guide.
 :::
 
-### `yarn webiny disable-tracking`
+### `yarn webiny disable-telemetry`
 
 Completely disables collection of anonymous usage information.
 
