fix: apply minor polishes

--- a/docs/tutorials/create-custom-application/graphql-api.mdx
+++ b/docs/tutorials/create-custom-application/graphql-api.mdx
@@ -108,7 +108,15 @@ For more information on how to use it, revisit the [Using the Watch Command](/do
 
 ## Quick Test
 
-Let's say we wanted to quickly test all of the newly created GraphQL query and mutation operations. The easiest way to do that would be to use a GraphQL client, like for example the [GraphQL Playground](https://www.electronjs.org/apps/graphql-playground). With it, we should be able to run the following `CreatePin` mutation:
+Let's say we wanted to quickly test all of the newly created GraphQL query and mutation operations. The easiest way to do that would be to use a GraphQL client, like for example the [GraphQL Playground](https://www.electronjs.org/apps/graphql-playground).
+
+:::tip
+In order to access our GraphQL API, we need to have its public URL. This is where the [`webiny output`](/docs/key-topics/webiny-cli#yarn-webiny-output---env-env) command can help.
+
+Running the `yarn webiny output pinterest-clone/api --env dev` command from your project root will display all of the values that were exported from your cloud infrastructure code (also known as **stack output**). This includes information like GraphQL API URL, Amazon DynamoDB table name, AWS region, and more.
+:::
+
+With it, we should be able to run the following `CreatePin` mutation:
 
 ```graphql title="GraphQL Mutation"
 mutation CreatePin($data: PinCreateInput!) {
@@ -137,10 +145,6 @@ Once run, we should receive a response similar to the following (the only piece 
 
 :::note
 By default, query and mutation operations defined by the [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-graphql-api) are publicly accessible. For now, this is not a concern for us. As mentioned, we will tackle the security aspect of our application in the upcoming sections of this tutorial.
-:::
-
-:::tip Misplaced GraphQL API URL?
-Running the `yarn webiny output pinterest-clone/api --env dev` command from your project root will display all of the values that were exported from your cloud infrastructure code. That includes GraphQL API URL, Amazon DynamoDB table name, AWS region, and more.
 :::
 
 Feel free to play around with other queries and mutations. Once you're ready to continue, in the following section, we'll shift our focus on the GraphQL API application code and explore how we can add the missing `coverImage` field to our **Pin** GraphQL type.
