--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -94,7 +94,7 @@ Running the `yarn webiny info` command in your Webiny project folder will give y
 :::caution Telemetry
 Please note that, by default, Webiny collects anonymous usage information, which is exclusively used for improving the product and understanding usage patterns. Please take a look at our [Telemetry](https://www.webiny.com/telemetry/) page for more information on this subject.
 
-If, at any point in time, you wish to disable this behaviour, you can do it with the [Webiny CLI](/docs/key-topics/webiny-cli), by running the following command: `yarn webiny disable-tracking`.
+If, at any point in time, you wish to disable this behaviour, you can do it with the [Webiny CLI](/docs/key-topics/webiny-cli), by running the following command: `yarn webiny disable-telemetry`.
 :::
 
 ## Troubleshooting
