--- a/docs/how-to-guides/scaffolding/react-application.mdx
+++ b/docs/how-to-guides/scaffolding/react-application.mdx
@@ -187,20 +187,18 @@ import { ReactComponent as WebinyLogo } from "../../images/webiny.svg";
 import Layout from "../../components/Layout";
 
 function MyNewPage(props: RouteChildrenProps) {
-    return (
-        <Layout className={"my-new-page"}>
-            <h1>My New Page</h1>
-            <h2>
-                This is my new page.
-            </h2>
-            <Link to={"/"}> &larr; Back</Link>
-        </Layout>
-    );
+  return (
+    <Layout className={"my-new-page"}>
+      <h1>My New Page</h1>
+      <h2>This is my new page.</h2>
+      <Link to={"/"}> &larr; Back</Link>
+    </Layout>
+  );
 }
 
 // We register routes via the `RoutePlugin` plugin.
 export default new RoutePlugin({
-    route: <Route path="/my-new-page" exact component={MyNewPage} />
+  route: <Route path="/my-new-page" exact component={MyNewPage} />,
 });
 ```
 
@@ -298,9 +296,3 @@ Note that the name of the workspace is defined in the workspace's `package.json`
 #### Do I need to deploy the created React application in order to continue development?
 
 No. As mentioned above, frontend application development can still be performed locally, on the developer's machine. You only deploy the application when you need to have it online.
-
-
-
-
-
-
