fix: apply minor polishes

--- a/docs/tutorials/create-custom-application/graphql-api.mdx
+++ b/docs/tutorials/create-custom-application/graphql-api.mdx
@@ -98,7 +98,9 @@ type Pin {
 }
 ```
 
-This is great because, as we can see, the type already contains two out of three fields we wanted our central **Pin** entity to have. The only field that's missing here is the `coverImage`. Don't worry, we'll see how we can add this field soon.
+This is great because, as we can see, the type already contains two out of three fields we wanted our central **Pin** entity to have. The only field that's missing here is the `coverImage`. Fear not, we'll see how we can add this field soon.
+
+For now, let's just do a quick test of the changes that were initially performed by the scaffold.
 
 :::note In Case You Missed It
 In order to actually see the new operations in your GraphQL API, your application code needs to be redeployed. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project), or, even easier, via the [`webiny watch`](/docs/how-to-guides/use-watch-command) command. The latter will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them.
@@ -108,13 +110,19 @@ For more information on how to use it, revisit the [Using the Watch Command](/do
 
 ## Quick Test
 
+### Retrieving the GraphQL API URL
+
+Before we continue, note that in order to do a quick manual test of our GraphQL API, we need to have the URL over which it can be accessed. This is where the following [`webiny output`](/docs/key-topics/webiny-cli#yarn-webiny-output---env-env) command can help us:
+
+```bash
+yarn webiny output pinterest-clone/api --env dev
+```
+
+Running this command from your project root will display all of the values that were exported from your cloud infrastructure code, which is also known as **stack output** (more on this soon). This includes information like GraphQL API URL, Amazon DynamoDB table name, AWS region, and more.
+
+### Testing the `CreatePin` Mutation
+
 Let's say we wanted to quickly test all of the newly created GraphQL query and mutation operations. The easiest way to do that would be to use a GraphQL client, like for example the [GraphQL Playground](https://www.electronjs.org/apps/graphql-playground).
-
-:::tip
-In order to access our GraphQL API, we need to have its public URL. This is where the [`webiny output`](/docs/key-topics/webiny-cli#yarn-webiny-output---env-env) command can help.
-
-Running the `yarn webiny output pinterest-clone/api --env dev` command from your project root will display all of the values that were exported from your cloud infrastructure code (also known as **stack output**). This includes information like GraphQL API URL, Amazon DynamoDB table name, AWS region, and more.
-:::
 
 With it, we should be able to run the following `CreatePin` mutation:
 
@@ -169,23 +177,23 @@ import { PinEntity } from "../types";
  * If needed, additional entities can be defined using the same approach.
  */
 export default new Entity<PinEntity>({
-    table,
-    name: "Pin",
-    timestamps: false,
-    attributes: {
-        PK: { partitionKey: true },
-        SK: { sortKey: true },
-        id: { type: "string" },
-        title: { type: "string" },
-        description: { type: "string" },
-        coverImage: { type: "string" },
-        createdOn: { type: "string" },
-        savedOn: { type: "string" },
+  table,
+  name: "Pin",
+  timestamps: false,
+  attributes: {
+    PK: { partitionKey: true },
+    SK: { sortKey: true },
+    id: { type: "string" },
+    title: { type: "string" },
+    description: { type: "string" },
+    coverImage: { type: "string" },
+    createdOn: { type: "string" },
+    savedOn: { type: "string" },
 
-        // Will store current version of Webiny, for example "5.9.1".
-        // Might be useful in the future or while performing upgrades.
-        webinyVersion: { type: "string" }
-    }
+    // Will store current version of Webiny, for example "5.9.1".
+    // Might be useful in the future or while performing upgrades.
+    webinyVersion: { type: "string" },
+  },
 });
 ```
 
@@ -200,15 +208,15 @@ Notice how we're passing the [`PinEntity`](https://github.com/webiny/webiny-exam
 
 ```ts title="pinterest-clone/api/code/graphql/src/plugins/scaffolds/pins/types.ts" {7}
 export interface PinEntity {
-    PK: string;
-    SK: string;
-    id: string;
-    title: string;
-    description?: string;
-    coverImage?: string;
-    createdOn: string;
-    savedOn: string;
-    webinyVersion: string;
+  PK: string;
+  SK: string;
+  id: string;
+  title: string;
+  description?: string;
+  coverImage?: string;
+  createdOn: string;
+  savedOn: string;
+  webinyVersion: string;
 }
 ```
 
