--- a/docs/tutorials/create-custom-application/react-application/layout.mdx
+++ b/docs/tutorials/create-custom-application/react-application/layout.mdx
@@ -168,7 +168,7 @@ With this final step, we should have our application layout in place, and we sho
 
 The final step that we need take here is cleaning up the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) component, located in the [`pinterest-clone/app/code/src/plugins/routes/home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx) file, and removing the [`UsefulLink`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/app/code/src/plugins/routes/home/UsefulLink.tsx#L10) and [`UsefulLinks`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/app/code/src/plugins/routes/home/UsefulLinks.tsx#L9) components, located in the [`pinterest-clone/app/code/src/plugins/routes/home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/app/code/src/plugins/routes/home) folder.
 
-All of these files were created during the scaffolding process, and basically they are irrelevant for our application. Alternatively, you could also move these files into a separate backup folder of your choice, possibly for future reference.
+All of these files were created during the scaffolding process, and are basically not needed by our application. Alternatively, you could also move these files into a separate backup folder of your choice, possibly for future reference.
 
 Once cleaned up, the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) component might look something like the following:
 
