fix: add AWS to prerequisites

--- a/docs/tutorials/create-custom-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/introduction.mdx
@@ -98,7 +98,7 @@ In this section, we start working on our GraphQL API, by extending it with the n
 
 Once our GraphQL API is in place, we're ready to start working on our frontend React application. The section itself is also organized into five sections, ensuring we don't rush with any of the steps we need to cover.
 
-#### Security (coming soon)
+#### [Security](/docs/tutorials/create-custom-application/security/introduction)
 
 In this section, we show how we can secure our application by integrating [Amazon Cognito](https://aws.amazon.com/cognito/).
 
@@ -112,7 +112,9 @@ In today's world, no application is complete without a file upload feature, so t
 
 In order to follow this tutorial, you should have a solid understanding of [JavaScript](https://developer.mozilla.org/en-US/docs/Web/javascript), [Node.js](https://nodejs.org/en/), [GraphQL](https://graphql.org/), and [React](https://reactjs.org/).
 
-Furthermore, on the frontend side, for anything styling-related, we'll use [Sass](https://sass-lang.com/), which is already included in every Webiny project. We'll also use the [Ant Design](https://ant.design/docs/react/introduce) React library to create the majority of the user interface. For both of these, a basic understanding will suffice.
+On the frontend side, for anything styling-related, we'll use [Sass](https://sass-lang.com/), which is already included in every Webiny project. We'll also include the [Ant Design](https://ant.design/docs/react/introduce) React library to create the majority of the user interface. For both of these, a basic understanding will suffice.
+
+Furthermore, we'll deploy our application to Amazon Web Services (AWS), where we'll rely on a couple of common and popular services like [AWS Lambda](https://aws.amazon.com/lambda/), [Amazon DynamoDB](https://aws.amazon.com/dynamodb/), [Amazon S3](https://aws.amazon.com/s3/), and more. In-depth knowledge of these service is not needed, but it is recommended to have at least a basic understanding of what they are used for.
 
 Finally, note that you should have a new Webiny project set up on your machine, version `5.14.0` or greater.
 
