fix: add note about the `dev` environment

--- a/docs/tutorials/create-custom-application/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/getting-started.mdx
@@ -87,7 +87,7 @@ For the name, we'll go with **Pinterest Clone**. For description and path, we'll
 
 Once we've answered all of the questions, after a quick confirmation step, scaffolding will start. Once the process has been completed, we'll also be asked about whether we want to include a simple GraphQL API example in the created application code. For now, we can go with **no** here.
 
-Furthermore, we'll also be asked about whether we want to immediately deploy the newly created GraphQL API. Here, it's recommended we go with **yes**, and that's what we'll do.
+Furthermore, we'll also be asked about whether we want to immediately deploy the newly created GraphQL API. Here, it's recommended we go with **yes**, and that's what we'll do. Note that the scaffold will use `dev` as the target environment.
 
 Ultimately, we should end up with the following output in our terminal:
 
