chore: empty commit

--- a/docs/tutorials/create-custom-application/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/getting-started.mdx
@@ -1,7 +1,7 @@
 ---
-id: getting-started
-title: Getting Started
-sidebar_label: Getting Started
+id: full-stack-application-scaffold
+title: Initial Setup With Full Stack Application Scaffold
+sidebar_label: Initial Setup With Full Stack Application Scaffold
 keywords: ["create", "custom", "application", "react", "graphql", "api", "scaffolding"]
 description: Learn how to use the existing Full Stack Application scaffold in order to start building your first custom Webiny application.
 ---
