wip: minor reword

--- a/docs/tutorials/create-custom-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/introduction.mdx
@@ -74,9 +74,10 @@ Of course, we'll be building a much simpler version of it. The application will 
 This is the end result we're aiming to achieve:
 
 <CenteredImage src={viewPins} alt="The Pinterest Clone Application - Pins List" />
+
 <CenteredImage src={viewPin} alt="The Pinterest Clone Application - Pin Details" />
 
-For now, we won't go into the specifics of which tools and libraries we will use, but we will say the application will be completely serverless. More on this soon, in the following sections.
+For now, we won't go into the specifics of which tools and libraries we will use, but we will mention the application will be completely serverless.
 
 ## The Plan
 
